routerrpc+routing: make fee levels queryable
We expose the fee level state of each node via rpc, outputting the state
within lncli without further changes.
