# lnrpc/routerrpc/router.swagger.json
@@ -1400,6 +1400,27 @@
       ],
       "default": "UNKNOWN"
     },
+    "routerrpcFeeLevel": {
+      "type": "object",
+      "properties": {
+        "node": {
+          "type": "string",
+          "format": "byte",
+          "description": "The node for the fee level."
+        },
+        "fee_level": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The node's fee level."
+        },
+        "last_update": {
+          "type": "string",
+          "format": "int64",
+          "description": "Last updated."
+        }
+      },
+      "title": "FeeLevel"
+    },
     "routerrpcFeeLevelParameters": {
       "type": "object",
       "properties": {
@@ -1819,6 +1840,14 @@
             "$ref": "#/definitions/routerrpcPairHistory"
           },
           "description": "Node pair-level mission control state."
+        },
+        "fee_levels": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/routerrpcFeeLevel"
+          },
+          "description": "Per node fee levels."
         }
       },
       "description": "QueryMissionControlResponse contains mission control state."
